tomcat/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-lb
  namespace: tomcat
spec:
  selector:
    app: tomcat
  ports:
    - port: 8082
      targetPort: 8080
  type: LoadBalancer
