tomcat/tomcat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcatingress
  namespace: tomcat
spec:
  ingressClassName: nginx
  rules:
    - host: test-tomcat.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tomcat-lb
              port:
                number: 8082
